--- a/src/projects/calore.mdx
+++ b/src/projects/calore.mdx
@@ -7,3 +7,67 @@ tags: ["cloudflare workers", "bun", "kv"]
 calore is a REST API running on a cloudflare worker that calculates and caches cover art for albums on musicbrainz, spotify, and iTunes.
 
 it support returning a variable amount of colors as well as saving stored colors for performance.
+
+calore powers this website's color themes!
+
+## usage
+
+in essence:
+
+```
+https://calore.thrzl.xyz?image=IMAGE_URL&count=COLOR_COUNT
+```
+
+- `image` should be a spotify album art/CAA url from `i.scdn.co` or `coverartarchive.org/release/`.
+
+- `color` (optional) should be the number of desired colors, 1-10. defaults to 4. if you want a dominant color, i recommend using the default (4) and just taking the first color.
+
+the response exists in this format, where each color is in RGB:
+```ts
+{
+    palette: [
+        [
+            number,
+            number,
+            number
+        ],
+        ...
+    ]
+}
+```
+
+the cache keys use the following structure:
+```
+{color count}:{image slug}
+```
+
+### example:
+```json
+// xhs "https://calore.thrzl.xyz/?image=https://i.scdn.co/image/ab67616d0000b273f8c7a1c275f8c00dd0b4eb6f"
+{
+    "palette": [
+        [
+            200,
+            195,
+            192
+        ],
+        [
+            67,
+            58,
+            59
+        ],
+        [
+            93,
+            91,
+            98
+        ],
+        [
+            114,
+            94,
+            102
+        ]
+    ]
+}
+```
+
+the code and full README are located [here](https://github.com/thrzl/calore).
