feat: show cool things on github links

--- a/src/posts/vanilla-marquee-fork.mdx
+++ b/src/posts/vanilla-marquee-fork.mdx
@@ -9,7 +9,7 @@ image: "clouds.jpg"
 
 this will be a short one
 
-i created a fork of the vanilla-marquee module! my version is located [here (thrzl/vanilla-marquee)](https://github.com/thrzl/vanilla-marquee) and contains two major changes:
+i created a fork of the vanilla-marquee module! my version is located [here](https://github.com/thrzl/vanilla-marquee) and contains two major changes:
 1. move away from `matt-utils` (the creator's snippet library that is not tree-shakeable) and instead just use normal JS functions (saved me about 1-2 KB)
 2. export the minified version so that vite or wtv doesnt have to worry about minifying it (it does a worse job anyway; saved me about 12 KB)
 
