--- a/src/projects/calore.mdx
+++ b/src/projects/calore.mdx
@@ -4,6 +4,8 @@ description: "calculate and cache album art color palettes from spotify, musicbr
 tags: ["cloudflare workers", "bun", "kv"]
 ---
 
+import CurrentAlbum from "@components/CurrentAlbum.astro"
+
 calore is a REST API running on a cloudflare worker that calculates and caches cover art for albums on musicbrainz, spotify, and iTunes.
 
 it support returning a variable amount of colors as well as saving stored colors for performance.
@@ -69,5 +71,11 @@ the cache keys use the following structure:
     ]
 }
 ```
+
+### demo
+
+this is the album that generated the current website theme:
+
+<CurrentAlbum/>
 
 the code and full README are located [here](https://github.com/thrzl/calore).
