feat: sort projects by date

--- a/src/projects/calore.mdx
+++ b/src/projects/calore.mdx
@@ -2,6 +2,7 @@
 title: "calore"
 description: "calculate and cache album art color palettes from spotify, musicbrainz, and iTunes"
 tags: ["cloudflare workers", "bun", "kv"]
+startDate: 2025-07-01
 ---
 
 import CurrentAlbum from "@components/CurrentAlbum.astro"
