--- a/src/projects/cf-colorthief.mdx
+++ b/src/projects/cf-colorthief.mdx
@@ -3,4 +3,5 @@ title: "cf-colorthief"
 description: "version of colorthief that uses WASM-based image decoding for compatibility with cloudflare workers"
 tags: ["typescript", "wasm"]
 url: "https://github.com/thrzl/cf-colorthief"
+startDate: 2025-07-01
 ---
