--- a/src/projects/chiffrage.mdx
+++ b/src/projects/chiffrage.mdx
@@ -2,6 +2,7 @@
 title: "chiffrage"
 description: "cross-platform UI for the age encryption format, prioritizing security and good defaults"
 tags: ["rust", "tauri", "age"]
+startDate: 2025-11-01
 ---
 
 import {Image} from "astro:assets"
