--- a/src/projects/keyage.mdx
+++ b/src/projects/keyage.mdx
@@ -2,6 +2,7 @@
 title: "keyage"
 description: "an anonymous(*) keyserver for age keys"
 tags: ["rust", "age", "sql"]
+startDate: 2026-01-01
 ---
 
 keyage is a service that stores age public keys.
