chore: fix chiffrage/getting-started.mdx title

--- a/src/projects/chiffrage/getting-started.mdx
+++ b/src/projects/chiffrage/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: getting started
+title: getting started with chiffrage
 startDate: 2025-01-01
 description: get started encrypting files with chiffrage & age encryption
 tags: ["blah", "blah"]
